syntax = "proto3";

package blockchain_network;

option go_package = "/blockchain_network";

service BlockchainService {
  rpc GetMaxHeight (GetMaxHeightRequest) returns (GetMaxHeightResponse);
  rpc StreamGetAllBlockchain (GetAllBlockchainRequest) returns (stream Block);
}

message GetMaxHeightRequest{}
message GetMaxHeightResponse {
  int64 height = 1;
}

message GetAllBlockchainRequest{}


message Block {
  int64 timestamp = 1;
  bytes hash = 2;
  repeated Transaction transactions = 3;
  bytes prev_hash = 4;
  int64 nonce = 5;
  int64 height = 6;
}

message Transaction {
  bytes id = 1;
  repeated TxInput inputs = 2;
  repeated TxOutput outputs = 3;
}

message TxInput {
  bytes tx_id = 1;
  int32 out = 2;
  bytes signature = 3;
  bytes pub_key = 4;
}

message TxOutput {
  int32 value = 1;
  bytes pub_key_hash = 2;
}
